Closed Bug 871905 Opened 13 years ago Closed 13 years ago

Fix function mismatch of calling nsIMobileMessageCallback::NotifyMessageDeleted() in widget/android/AndroidBridge.cpp caused by Bug 771458

Categories

(Core :: DOM: Device Interfaces, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24
Tracking Status
firefox22 --- wontfix
firefox23 --- wontfix
firefox24 --- fixed
b2g18 --- unaffected

People

(Reporter: chucklee, Assigned: chucklee)

References

Details

(Whiteboard: [fixed-in-birch])

Attachments

(1 file, 1 obsolete file)

This issue is found on b2g18 try build https://tbpl.mozilla.org/?tree=Try&rev=63247141bf75, Build error on android platform with log [1]. This issue does not show up in m-c try build but should be fixed. [1] https://tbpl.mozilla.org/php/getParsedLog.php?id=22926788&tree=Try#error0
This bug is follow up bug for leo+ bug 771458, and is required to successfully build on b2g18 branch, also prevent future build error on m-c.
blocking-b2g: --- → leo?
Blocks: 860607
Please attach two try links, one for m-c, the other for b2g18 instead. I had a try a minute before with WEBSMS_BACKEND enabled, but it shows more errors than you got.
Flags: needinfo?(vyang)
(In reply to Vicamo Yang [:vicamo][:vyang] from comment #3) > Please attach two try links, one for m-c, the other for b2g18 instead. I > had a try a minute before with WEBSMS_BACKEND enabled, but it shows more > errors than you got. try for current m-c : https://tbpl.mozilla.org/?tree=Try&rev=ce92be92342d try for patch on b2g : https://tbpl.mozilla.org/?tree=Try&rev=5b64fd9ac60e
Summary: Fix build error on android platform → Fix function mismatch of calling nsIMobileMessageCallback::NotifyMessageDeleted() in widget/android/AndroidBridge.cpp caused by Bug 771458
Clear leo?. Will be landed in m-c and directly integrated into b2g18 patch set in bug 771458.
blocking-b2g: leo? → ---
Attachment #750242 - Flags: review?(vyang) → review+
https://hg.mozilla.org/mozilla-central/rev/e4f4691407c2 I assume this'll get a leo? nom soon?
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
(In reply to Ryan VanderMeulen [:RyanVM] from comment #10) > I assume this'll get a leo? nom soon? Nevermind, I see this was rolled into the b2g18 patches for bug 771458.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: