Bug 871905 - Fix build error on android platform. r=vicamo