widget/android/AndroidJNI.cpp
@@ -451,7 +451,8 @@ Java_org_mozilla_gecko_GeckoSmsManager_notifySmsDeleted(JNIEnv* jenv, jclass,
           AndroidBridge::Bridge()->DequeueSmsRequest(mRequestId);
         NS_ENSURE_TRUE(request, NS_ERROR_FAILURE);
 
-        request->NotifyMessageDeleted(mDeleted);
+        // For android, we support only single SMS deletion.
+        request->NotifyMessageDeleted(&mDeleted, 1);
         return NS_OK;
       }
 
